# distributed-config

./: .gitignore  AI-Init.md  AI-Session-State.md  ARCHITECTURE.md  BEHAVIOR.md  Dockerfile  Makefile  PROJECT_ANALYSIS.md  README.md  TESTING.md  TODO.md  distributed_config.go  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci-cd.yml  deploy.yml  python-wheels.yml
cmd/config-cli/: main.go
cmd/test/: main.go
config/: default.yaml
python/: config_test.yaml  debug_lib.py  pyproject.toml
python/capi/: main.go
python/distributed_config/: __init__.py  distributed_config.py  libdistributed_config.h
python/tests/: test_config.py
src/core/: config.go  defaults.go  service_schemas.go  skeleton.go
src/facade/: config_facade.go  config_facade_test.go  config_preprod.yaml
src/factory/: config_factory.go
src/interfaces/: config_strategy.go
src/loader/: env_loader.go  loader.go  loader_test.go  path_resolver.go  path_resolver_test.go  validator.go  validator_test.go
src/models/: config_server.go  database.go  filesystem.go  jupyter.go  log_server.go  logger.go  monitoring.go  notif_server.go  notification.go  scheduler.go  tele_remote.go  telebot.go  timescale_db.go  web_interface.go
src/network/: client.go  network_test.go  proto_handler.go
src/schemas/: config.pb.go  config.proto
src/secret/: crypto.go
src/strategies/: preprod.go  production.go  staging.go  standalone.go  strategies_test.go  test.go
src/utils/: logger.go
