[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-config"
version = "0.1.0"
description = "Python bindings for the Distributed Config Go library"
readme = "README.md"
authors = [
    { name = "Bastien Antigravity" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["distributed_config*"]

[tool.setuptools.package-data]
distributed_config = ["*.so", "*.dylib", "*.dll"]
